// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render WelcomeMessage with empty string 1`] = `
<section>
  <h2
    className="heading-secondary"
  >
    
  </h2>
  
</section>
`;

exports[`Render WelcomeMessage with text 1`] = `
<section>
  <h2
    className="heading-secondary"
  >
    test heading
  </h2>
  
</section>
`;
